# htls

./: build.py  pyproject.toml
.github/workflows/: wheels.yml
src/htls/: __init__.py  cffi_loader.py
src/htls/cffi/enums/: custom_tls_client.py
src/htls/cffi/funcs/: destroy.py  free_memory.py  request.py
src/htls/cffi/objects/: request.py
src/htls/cffi/objects/go/: destroy_session_object.py  go_object.py  response.py
src/htls/client/: __init__.py  api.py  async_api.py  async_session.py  exceptions.py  hooks.py  prepared_request.py  request.py  response.py  session.py  structures.py  utils.py
src/tls_client_cffi/: cffi_loader.py
src/tls_client_cffi/cffi/: __init__.py
src/tls_client_cffi/cffi/enums/: __init__.py
src/tls_client_cffi/cffi/funcs/: __init__.py  cookie.py  destroy.py  free_memory.py  request.py
src/tls_client_cffi/cffi/objects/: __init__.py  custom_tls_client.py  request.py
src/tls_client_cffi/cffi/objects/go/: __init__.py  go_exception.py  go_object.py  response.py
src/tls_client_cffi/client/: __init__.py  auth.py  exceptions.py  hooks.py  prepared_request.py  response.py  session.py  structures.py  utils.py
src/tls_client_cffi/libs/: README.md
